# fw_compression

./: .gitignore  CLAUDE.md  PROGRESS_REPORT.ja.md  PROJECT_OVERVIEW_FOR_DISCUSSION.md  README.md  SPARSE_EVENT_TOPM.md  env.yaml.example  envconfig.py  evaluate_autoencoder.py  evaluate_spatial.py  event_aware_experiment_plan.md  eventnet_v4.md  ghost_datasets  initial_research_plan.md  pyproject.toml  train_autoencoder.py  train_spatial.py
FW_Event_Net/: EXPERIMENT_LOG.ja.md  EXPERIMENT_LOG.md  RESULTS.md  SCENE_GEOMETRY.ja.md  SCENE_GEOMETRY.md  initial_plan.md
FW_Event_Net/figs/: EventTensorNetV2  EventTensorNetV2_spatialAttn  EventTensorNet_V1  README.md  UNet2D_v2_noSA  UNet2D_v2sa_bottleneckSA  V1_modules  V2_modules  V2sa_modules
FW_Event_Net/figs/curves/: README.md
compression/: autoencoder.py  decoders.py  encoders.py  event_extraction.py  event_synthesis.py  spatial_coding.py
compression/data/: physical_waveforms.py  real_waveforms.py  spatial_waveforms.py  synthetic_waveforms.py
compression/downstream/: ghost_fwl_hook.py
compression/utils/: metrics.py  peak_fit.py  plot.py
downstream/: AW_JOINT_WHY_TA_EQ_TAW.md  RESULTS.md  RETRAIN_RESULTS.md  SCORE_DISCREPANCY.md  SESSION_PROGRESS_2026-06-18.md  analyze_pulse_shape.py  cache_repr.py  diag_capacity.py  diag_ghost.py  diag_ghost_bindist.py  diag_ghost_cases.py  diag_ghost_early.py  diag_ghost_features.py  diag_ghost_spatial.py  plot_ksweep.py  run_ckptvar.py  run_emg_sweep.py  run_eval.py  run_eval_peak.py  run_plot.py  run_plot_compare.py  run_plot_events.py  run_retrain.py  run_sweep.py  run_sweep_ah.py  run_sweep_events.py  vis_taw_vs_full_fullregion.py  vis_taw_vs_full_rerun.py
downstream/configs/: _repro_d10.yaml  _repro_tiny.yaml  evalA_smoke.yaml  evalA_split2_test.yaml  evalA_split2_test_best.yaml  evalA_split2_test_noignore.yaml
downstream/configs/ckptvar/: all_0.03554.yaml  all_0.03560.yaml  baseline_0.02523.yaml  cutmix-shift_0.02827.yaml  no-cutmix_0.03005.yaml  no-noise_0.03591.yaml  no-rotate_0.03553.yaml  no-shift_0.03508.yaml  only-cutmix_0.02485.yaml  only-cutmix_0.02539.yaml  only-cutmix_0.02587.yaml  only-cutmix_0.02608.yaml  (+4 more)
downstream/outputs/: evalA_noignore.json  evalA_orig.json  pulse_shape.npz
eventnet/: __init__.py  cache_events.py  cache_test_peaks.py  data.py  diag_aw_joint.py  diag_width_per_scene.py  evaluate.py  events.py  losses.py  metrics.py  model.py  paths.py  plot_curves.py  plot_results.py  run_sweep.py  sparse_event_topm.py  split2_dirs.json  train.py
eventnet/configs/: sparse_event_topm_ta_k4.yaml  sparse_event_topm_taw_k4.yaml
fog_viz/: USAGE.md  vis_blooming_rerun.py  vis_pcd_rerun.py  vis_pcd_waveform.py  viz_waveforms.py
runs/real_A/: config.json  summary.json  upper_bound.json
runs/real_A_spatial/: config.json  summary.json  upper_bound.json
runs/real_B/: config.json  summary.json  upper_bound.json
runs/real_B_spatial/: config.json  summary.json  upper_bound.json
runs/real_cache_smoke/: scene001_d340ad943f.npz
runs/real_split2_1d/: config.json
runs/real_split2_1d_ah/: config.json
runs/real_split2_spatial/: config.json
runs/real_split2_spatial_ah/: config.json
runs/spatial_smoke/: scene001_b4_44f186bf4d.npz  scene001_b4_9a1bc29541.npz
runs/sweep/: config.json  summary.json  upper_bound.json
runs/sweep_phys/: config.json  summary.json  upper_bound.json
tests/: test_event_extraction.py  test_event_synthesis.py
(+391 files in other folders)
