[project]
name = "fw-compression"
version = "0.1.0"
description = "Lightweight encoder + DNN decoder compression for full-waveform LiDAR, evaluated against Ghost-FWL downstream."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.7.0",
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "tqdm>=4.66",
  "blosc2>=4.4.2",
]

[dependency-groups]
dev = [
  "ruff>=0.11.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["compression"]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[tool.uv.sources]
torch = [
  {index = "pytorch-cu128", marker = "sys_platform == 'linux'"},
]

# cu128 build: required for Blackwell (RTX PRO 6000, sm_120) on this machine.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
